# kb-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/comet/: SKILL.md
.claude/skills/comet-build/: SKILL.md
.claude/skills/comet-design/: SKILL.md
.claude/skills/comet-hotfix/: SKILL.md
.claude/skills/comet-open/: SKILL.md
.claude/skills/comet-tweak/: SKILL.md
.claude/skills/comet-verify/: SKILL.md
books/: 焦氏易林.txt
books/六爻参考/: duangua-advanced.md  duangua-core.md  gua-ci.md  liuqin-rules.md  liushen-rules.md  najia-table.md  shiyao-table.md  yao-ci.md
books/增删卜易/: chapter1_README.md  chapter1_glossary.md  chapter2_glossary.md  chapter3_glossary.md  chapter4_glossary.md
docs/: architecture.md  kb-mcp-server-usage.md
docs/gpt总结/: YI-AI 项目知识体系与 kb-mcp-server 评审总结.md
src/kb_mcp_server/: __init__.py  __main__.py  config.py
src/kb_mcp_server/api/: __init__.py  app.py  config_api.py
src/kb_mcp_server/core/: __init__.py  chunker.py  entity_extractor.py  incremental_updater.py  kb_manager.py  orchestrator.py  query_expander.py  yijing_extractor.py
src/kb_mcp_server/embedding/: __init__.py  base.py  fastembed_provider.py  openai_provider.py
src/kb_mcp_server/mcp/: __init__.py  server.py  tools.py
src/kb_mcp_server/models/: __init__.py  chunk.py  entity.py  knowledge_base.py  search.py
src/kb_mcp_server/parsers/: __init__.py  base.py  (+3 more)
tests/: conftest.py  test_chunker.py  test_entity_extractor.py  test_mcp_tools.py  test_neo4j_adapter.py  test_orchestrator.py  test_parsers.py
(+14 files in other folders)
